Fix mobile on-scroll header title overflow with ellipsis truncation

--- a/src/styl/layouts/header.styl
+++ b/src/styl/layouts/header.styl
@@ -60,6 +60,9 @@ html
   display: inline-block
   max-width: 100%
   vertical-align: middle
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
 
 // @media screen and (max-width: $breakpoint-xl)
 //   html
